# pyprojecttemplate

./: README.md  pyproject.toml  ruff.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
pyprojecttemplate/: hello.py
